# zeroHETI

./: .gitignore  .gitmodules  Bender.yml  Makefile  README.md  rules.verible_lint  west.yml
.github/workflows/: pr_lint.yml  riscv_compliance.yml  rust.yml  zephyr.yml
doc/: control_sim.md
dts/riscv/: zeroheti.dtsi
dv/: Makefile  config.ini
dv/sail_cSim/: riscof_sail_cSim.py
dv/zeroheti/: riscof_zeroheti.py
dv/zeroheti/env/: link.ld  model_test.h
examples/: .gitignore  run-sim.sh
examples/i2c_power/: Cargo.toml  build.rs  riscv32ec-unknown-eabi.json  riscv32ic-unknown-eabi.json  riscv32ic-unknown-none-elf.json  riscv32imc-unknown-eabi.json  riscv32imc-unknown-none-elf.json
examples/i2c_power/.cargo/: config.toml
examples/i2c_power/src/: main.rs
examples/motor_control/: Cargo.toml  README.md  build.rs
examples/motor_control/src/: lib.rs  mailbox.rs  main.rs  main_rtic.rs  main_rtic_edfic.rs
examples/periodic_tasks/: Cargo.toml
examples/periodic_tasks/.cargo/: config.toml
examples/periodic_tasks/src/: main.rs
examples/smoke_tests/: Makefile
examples/smoke_tests/common/: addr_map.h  common.h  crt0.S  csr.h  hetic.h  i2c.h  link.ld  mmio.h  mtimer.h  timer_group.h  uart.h
examples/smoke_tests/hello/: Makefile  crt0.S  test.c
examples/smoke_tests/hetic/: test.c
examples/smoke_tests/i2c/: test.c
examples/smoke_tests/i2c_pid/: Makefile  crt0.S  test.c
examples/smoke_tests/mtime/: Makefile  test.c
examples/smoke_tests/sw_irq/: crt0.S  test.c
examples/smoke_tests/timer_group/: test.c
examples/smoke_tests/zhic/: test.c
examples/zephyr/clic/: CMakeLists.txt
examples/zephyr/clic/src/: main.c
examples/zephyr/common/: board.h  mailbox.h  motor.h
examples/zephyr/hello_world/src/: main.c
examples/zephyr/motor_control/: CMakeLists.txt  README.md
examples/zeroheti-bsp/: .gitignore  Cargo.toml  README.md  build.rs  memory.x  riscv32ic-unknown-eabi.json  run-sim.sh  rust-toolchain.toml
examples/zeroheti-bsp/.cargo/: config.toml
examples/zeroheti-bsp/examples/: all_irqs.rs  clic_all_irqs.rs  control_sim.rs  fail.rs  hello.rs  hetic_pend.rs  hi_blocks_lo.rs  hi_preempts_lo.rs  i2c_tx.rs  issue_42.rs  mailbox.rs  mtimer.rs  power_prof.rs  version.rs
examples/zeroheti-bsp/examples/common/: mod.rs
examples/zeroheti-bsp/macros/: Cargo.toml
examples/zeroheti-bsp/macros/src/: archi.rs  lib.rs  trampoline.rs  validate.rs
examples/zeroheti-bsp/src/: apb_uart.rs  clic.rs  core_sprint.rs  edfic.rs  hetic.rs  i2c.rs  interrupt.rs  lib.rs  mmio.rs  mtimer.rs  panic.rs  peripherals.rs  register.rs  tb.rs  timer_group.rs  trap.rs  ufmt_sprint.rs
examples/zeroheti-bsp/src/clic/: intattr.rs  intctl.rs  intie.rs  intip.rs  smclicconfig.rs
examples/zeroheti-bsp/src/mmap/: apb_timer.rs  clic.rs  edfic.rs  hetic.rs  i2c.rs  mod.rs  mtimer.rs  uart.rs
fpga/: Makefile  README.md
fpga/constraints/: pynq-z1.xdc
fpga/ips/top_clock/: top_clock_ip_run.tcl
fpga/rtl/: zeroheti_pynq.sv
fpga/scripts/: common.tcl  design_sources.tcl  env.tcl  ft232_openocd_RT-SS.cfg  pynq-z1.tcl  run.tcl  util.tcl
rtl/: apb_cfg_regs.sv  apb_hetic.sv  apb_i2c.sv  apb_mtimer.sv  apb_zhic.sv  i2c_master_bit_ctrl.sv  i2c_master_byte_ctrl.sv  irq_arbiter.sv  irq_gateway.sv  mbx_axi_ctrl.sv  mock_uart.sv  obi_connection.sv  obi_cut_intf.sv  obi_hetic.sv  obi_mb_sram_intf.sv  obi_mbx.sv  obi_sram_intf.sv  obi_to_apb_intf.sv  zeroheti_core.sv  zeroheti_core_xbar.sv  zeroheti_dbg_wrapper.sv  zeroheti_int_ctrl.sv  zeroheti_pkg.sv  zeroheti_top.sv  zeroheti_xbar.sv
rtl/include/: i2c_master_defines.sv
scripts/: tasks.surf.ron  tasks_and_m3.surf.ron  tasks_and_m3_simplified.surf.ron
surfer/: scb.ron
verilator/: Makefile  format_elf.sh  waiver.vlt
verilator/tb/: ArchTestDriver.h  TbUtils.h  vip_ctrl_sim.sv  vip_i2c.sv  zeroheti_compliance.cc  zeroheti_compliance.h  zeroheti_compliance.sv  zeroheti_top.cc  zeroheti_top.h  zeroheti_top_wrapper.cc  zeroheti_top_wrapper.h  zeroheti_top_wrapper.sv
verilator/tb/vip/: vip_ctrl_sim.sv  vip_i2c.sv  vip_mbx.sv  vip_mbx_driver.sv  vip_motor_sim.sv  vip_sim_env.sv  vip_task_scoreboard.sv  vip_uart.sv  vip_zeroheti_top.sv
zephyr/: CMakeLists.txt  Kconfig  README.md  module.yml
zephyr/drivers/: CMakeLists.txt
zephyr/drivers/debug/: CMakeLists.txt  debug.c  debug.h
zephyr/drivers/i2c/: CMakeLists.txt  i2c.c  i2c.h
zephyr/drivers/interrupt_controller/: CMakeLists.txt  Kconfig  intc_clic_rmw.S  intc_clic_rmw.c  intc_clic_rmw.h
(+14 files in other folders)
