[package]
name = "zeroheti-bsp"
version = "0.1.0"
edition = "2024"

[dependencies]
atalanta-bsp-macros = { path = "macros"}
embedded-io = "0.7.1"
fugit = "0.3.7"
riscv = "0.15.0"
riscv-pac = "0.2.0"
# riscv-rt 0.16.0 depends on 0.15.0
riscv-rt = { version = "0.16.0", features = ["single-hart", "v-trap", "no-interrupts"], optional = true }
strum = { version = "0.27.2", default-features = false, features = ["derive"] }
ufmt = { version = "0.2.0", optional = true }

[features]
default = ["panic", "rt", "core-fmt", "nest-continue"]
core-fmt = []
ufmt = ["dep:ufmt"]
rtl-tb = []
fpga = []
panic = []
rt = ["dep:riscv-rt"]
nest-continue = []

[profile.dev]
# There seems to be a problem in riscv-rt with regards to linking in default_start_trap in debug
# mode. `codegen-units = 1` avoids that
codegen-units = 1
opt-level = "s"

[profile.release]
debug = true

